Fix alignment in elements list.

--- a/app/assets/stylesheets/components/ElementGroupsRenderer_ElementListRenderer.scss
+++ b/app/assets/stylesheets/components/ElementGroupsRenderer_ElementListRenderer.scss
@@ -12,7 +12,6 @@
   }
   .element-group-header-content,
   .element-list-item-content {
-    @extend .d-flex;
     @extend .flex-grow-1;
     @extend .p-2;
   }
